--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta name="description" content="Neo-Tokyo, from its vibrant nightlife to its iconic landmarks, in this thrilling metropolis">
     <link href="https://fonts.googleapis.com/css?family=Zen+Dots:regular" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet" />
     <link rel="stylesheet" href="css/style2.css">
